Fix z-index

--- a/app/assets/stylesheets/section/suggestions.scss
+++ b/app/assets/stylesheets/section/suggestions.scss
@@ -57,7 +57,7 @@ div.full_container {
           text-indent: -9999px;
           display: block;
           top: 0;
-          z-index: 1000;
+          z-index: 100;
           &.off20 {
             background: url("/assets/gift/label-20off.png") no-repeat;
             width: 226px;
